Collection instances (Hair particle system, geometry nodes) visible when set to "Indirect Only" on view layer on OptiX Cycles #89801

Closed
opened 2021-07-11 19:52:55 +02:00 by Samuli Vuorinen · 9 comments

System Information
Operating system: Windows 10.0.19043 Build 19043
Graphics card: NVIDIA GeForce RTX 3070, driver version 471.11

Blender Version
Broken: 2.93.1, I also tested the daily 2.93.2 build 9e64fd461a

Short description of error
If you have an object covered in a hair particle system in a collection, and you set the rendering mode of that collection to Indirect Only, you can still randomly see the particles directly when rendering with Cycles and OptiX. The visibility varies from render tile to render tile. The emitter object does not show up randomly like the particles do.

Below is an example scene rendered with OptiX. The cube and icosphere are the particle emitter objects that exist in different collections, and the Suzanne monkey heads are the particles. The collection containing the icosphere is set to Indirect Only mode. Thus the monkey particles on the right should be hidden from direct rendering, but appear randomly.

suzanne_optix.png

Here is the same scene rendered with CUDA, and it works as expected.

suzanne_cuda.png

Weirdly, hiding the cube also hides the randomly appearing monkey heads on the icosphere.

Exact steps for others to reproduce the error

  1. Open the attached blend file
  2. Make sure you have OptiX selected as the rendering device in preferences
  3. Press F12 to render
  4. Change rendering device to CUDA and render again for comparison

optix_bug.blend

Here is the system info file from Blender. system-info.txt


From #89707:

When a collection is set to Indirect Only, and thus should not be directly visible, geometry generated by Geometry Nodes inside said collection ignores the setting and appears as visible.

Screenshot_20210707_122205.png
the incorrect behavior, with Geometry Nodes enabled.

Screenshot_20210707_122217.png
the correct behavior, when the view layer visibility of Geometry Nodes is disabled

Exact steps for others to reproduce the error

  1. Apply a geometry node modifier to an object.
  2. Place said object in a collection.
  3. From the Outliner, set the aforementioned collection as "Indirect Only".
  4. Observe the incorrect behavior.

A simple .blend file is attached, which clearly shows what is happening.
I've tested this on both Blender 3.0.0 and Blender 2.93.1. In both cases, the error appears.

buggeo.blend
system-info.txt

**System Information** Operating system: Windows 10.0.19043 Build 19043 Graphics card: NVIDIA GeForce RTX 3070, driver version 471.11 **Blender Version** Broken: 2.93.1, I also tested the daily 2.93.2 build 9e64fd461ac3 **Short description of error** If you have an object covered in a hair particle system in a collection, and you set the rendering mode of that collection to Indirect Only, you can still randomly see the particles directly when rendering with Cycles and OptiX. The visibility varies from render tile to render tile. The emitter object does not show up randomly like the particles do. Below is an example scene rendered with OptiX. The cube and icosphere are the particle emitter objects that exist in different collections, and the Suzanne monkey heads are the particles. The collection containing the icosphere is set to Indirect Only mode. Thus the monkey particles on the right should be hidden from direct rendering, but appear randomly. ![suzanne_optix.png](https://archive.blender.org/developer/F10220672/suzanne_optix.png) Here is the same scene rendered with CUDA, and it works as expected. ![suzanne_cuda.png](https://archive.blender.org/developer/F10220670/suzanne_cuda.png) Weirdly, hiding the cube also hides the randomly appearing monkey heads on the icosphere. **Exact steps for others to reproduce the error** 1. Open the attached blend file 2. Make sure you have OptiX selected as the rendering device in preferences 3. Press F12 to render 4. Change rendering device to CUDA and render again for comparison [optix_bug.blend](https://archive.blender.org/developer/F10220674/optix_bug.blend) Here is the system info file from Blender. [system-info.txt](https://archive.blender.org/developer/F10220684/system-info.txt) --- From #89707: When a collection is set to Indirect Only, and thus should not be directly visible, geometry generated by Geometry Nodes inside said collection ignores the setting and appears as visible. ![Screenshot_20210707_122205.png](https://archive.blender.org/developer/F10215873/Screenshot_20210707_122205.png) *the incorrect behavior, with Geometry Nodes enabled.* ![Screenshot_20210707_122217.png](https://archive.blender.org/developer/F10215877/Screenshot_20210707_122217.png) *the correct behavior, when the view layer visibility of Geometry Nodes is disabled* **Exact steps for others to reproduce the error** 1. Apply a geometry node modifier to an object. 2. Place said object in a collection. 3. From the Outliner, set the aforementioned collection as "Indirect Only". 4. Observe the incorrect behavior. A simple .blend file is attached, which clearly shows what is happening. I've tested this on both Blender 3.0.0 and Blender 2.93.1. In both cases, the error appears. [buggeo.blend](https://archive.blender.org/developer/F10215889/buggeo.blend) [system-info.txt](https://archive.blender.org/developer/F10215896/system-info.txt)

Added subscriber: @SamuliVuorinen

Added subscriber: @SamuliVuorinen

#89707 was marked as duplicate of this issue

#89707 was marked as duplicate of this issue
Member

Added subscribers: @pmoursnv, @lichtwerk

Added subscribers: @pmoursnv, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

CC @pmoursnv

Can confirm. CC @pmoursnv
Philipp Oeser changed title from Hair particle system partially visible when set to indirect rendering on view layer on OptiX Cycles to Collection instances (Hair particle system, geometry nodes) visible when set to "Indirect Only" on view layer on OptiX Cycles 2021-09-06 13:21:56 +02:00
Member

Added subscribers: @scopelma, @PratikPB2123

Added subscribers: @scopelma, @PratikPB2123

This issue was referenced by blender/cycles@9f3d46f87c

This issue was referenced by blender/cycles@9f3d46f87cea48cd6ca2732ae02412de08b43d95

This issue was referenced by 2189dfd6e2

This issue was referenced by 2189dfd6e25a7bb6b734116619d87bc2d2a535ff
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Patrick Mours self-assigned this 2021-09-27 17:13:59 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89801
No description provided.